Work on elastic cache feature

--- a/cdk-services/src/product-service/package.json
+++ b/cdk-services/src/product-service/package.json
@@ -6,7 +6,8 @@
     "@aws-sdk/client-dynamodb": "^3.341.0",
     "@aws-sdk/util-dynamodb": "^3.341.0",
     "aws-xray-sdk": "^3.5.0",
-    "http-errors": "^2.0.0"
+    "http-errors": "^2.0.0",
+    "redis": "^4.6.7"
   },
   "devDependencies": {
     "@types/http-errors": "^2.0.1",
