--- a/express-service/tsconfig.json
+++ b/express-service/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "outDir": "dist",
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "typeRoots": ["types.d.ts"]
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules"]
