--- a/express-service/package.json
+++ b/express-service/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/aws-lambda": "^8.10.119",
+    "@vendia/serverless-express": "^4.10.4",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
@@ -26,7 +28,8 @@
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "nodemon": "^2.0.22",
+    "serverless-plugin-typescript": "^2.1.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.4.2"
+    "typescript": "^4.9.5"
   }
 }
