--- a/posts-service-apollo/package.json
+++ b/posts-service-apollo/package.json
@@ -29,7 +29,9 @@
     "@serverless/typescript": "^3.29.0",
     "@types/cors": "^2.8.13",
     "@types/node": "^18.16.3",
+    "@types/shortid": "^0.0.29",
     "@types/webpack-node-externals": "^3.0.0",
+    "@types/ws": "^8.5.5",
     "babel-loader": "^9.1.2",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "serverless": "^3.30.1",
@@ -46,10 +48,9 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "compile": "tsc",
-    "start": "npm run compile && nodemon ./dist/server.js",
+    "start": "npm run compile && nodemon ./dist/src/server.js",
     "dev": "nodemon --exec node --loader ts-node/esm src/server.ts",
     "prod": "ts-node-dev —respawn —transpileOnly ./src/server.ts"
   },
