solution of graphql type in lambda

--- a/posts-service-apollo/serverless.yml
+++ b/posts-service-apollo/serverless.yml
@@ -4,19 +4,28 @@ provider:
   name: aws
   runtime: nodejs18.x
   region: us-east-2
+  httpApi:
+    cors: true
+  environment:
+    PORT: ${env:PORT}
+    DATABASE_CLOUD: ${env:DATABASE_CLOUD}
+    CLOUDINARY_CLOUD_NAME: ${env:CLOUDINARY_CLOUD_NAME}
+    CLOUDINARY_API_KEY: ${env:CLOUDINARY_API_KEY}
+    CLOUDINARY_API_SECRET: ${env:CLOUDINARY_API_SECRET}
+
+useDotenv: true
 
 package:
   patterns:
     - "!@aws-sdk/*"
 
 custom:
-  webpack:
-    webpackConfig: "webpack.config.js" # Name of webpack configuration file
-    packager: "npm" # Packager that will be used to package your external modules
-    excludeFiles: src/**/*.test.js # Provide a glob for files to ignore
-    includeModules:
-      forceExclude:
-        - "@aws-sdk/*"
+  # webpack:
+  #   webpackConfig: ./webpack.config.js # Name of webpack configuration file
+  # jetpack:
+  #   loaders:
+  #     - test: /\.graphql$/
+  #       loader: graphql-tag/loader
   httpApi:
     cors: true
 
@@ -33,9 +42,12 @@ functions:
       - httpApi:
           path: /
           method: GET
+
 # Omit the following lines if you aren't using TS!
 plugins:
   - serverless-plugin-typescript
-  - serverless-webpack
+  # - serverless-jetpack
+
+  # - serverless-webpack
 
   # // serverless invoke local -f graphql -p query.json
