--- a/posts-service-apollo/package.json
+++ b/posts-service-apollo/package.json
@@ -14,6 +14,7 @@
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.21.3",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.12.1",
     "http": "^0.0.1-security",
     "mongoose": "^7.0.4",
@@ -35,6 +36,7 @@
     "babel-loader": "^9.1.2",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "serverless": "^3.30.1",
+    "serverless-jetpack": "^0.11.2",
     "serverless-offline": "^12.0.4",
     "serverless-plugin-typescript": "^2.1.4",
     "serverless-webpack": "^5.11.0",
