--- a/cdk-group-chat-app/package.json
+++ b/cdk-group-chat-app/package.json
@@ -28,6 +28,7 @@
     "typescript": "~5.0.4"
   },
   "dependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.354.0",
     "aws-cdk-lib": "2.84.0",
     "constructs": "^10.0.0",
     "dotenv": "^16.3.1",
