--- a/appartment-cdk/package.json
+++ b/appartment-cdk/package.json
@@ -24,6 +24,7 @@
     "@aws-lambda-powertools/logger": "^0.9.1",
     "@aws-lambda-powertools/tracer": "^0.9.1",
     "@aws-sdk/client-dynamodb": "^3.369.0",
+    "@aws-sdk/client-sqs": "^3.369.0",
     "@aws-sdk/lib-dynamodb": "^3.365.0",
     "@graphql-codegen/cli": "^4.0.1",
     "@graphql-codegen/typescript": "^4.0.1",
