--- a/headlessBrowserTesting/.env
+++ b/headlessBrowserTesting/.env
@@ -3,3 +3,4 @@ SECRET_KEY=QovNVS7wzzLIqDkbnwF1u0ZYsmODZeWY
 googleClientID=567562781843-kj2874kmpj2gc3ftmqtndqmq312jr9lr.apps.googleusercontent.com
 googleClientSecret=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
 REDIS_URL=redis://default:VODDIrh8surEMBxuVJB3CndKrz9jVd8F@redis-12048.c245.us-east-1-3.ec2.cloud.redislabs.com:12048
+AWS_RESOURCE_BUCKET=asdf-images-bank
