--- a/headlessBrowserTesting/package.json
+++ b/headlessBrowserTesting/package.json
@@ -20,10 +20,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.374.0",
+    "@aws-sdk/s3-request-presigner": "^3.375.0",
     "aws-sdk": "2.188.0",
     "body-parser": "1.17.2",
     "concurrently": "3.5.0",
     "cookie-session": "2.0.0-beta.2",
+    "dotenv": "^16.3.1",
     "express": "4.15.3",
     "jest": "^29.6.1",
     "migrate-mongoose": "3.2.2",
@@ -34,6 +37,6 @@
     "path-parser": "2.0.2",
     "puppeteer": "^20.8.2",
     "redis": "2.8.0",
-    "uuid": "3.2.1"
+    "uuid": "^3.2.1"
   }
 }
